# permit-data

./: .gitignore  README.md  ny-permits.py  pyproject.toml
output/: 330_8th_St.csv  EV.csv  MANHATTAN-clean-and-flattened-emails-2024.csv  MANHATTAN-clean-emails-2024.csv  MANHATTAN-emails-2024.csv  MANHATTAN-emails-progress-2024.csv  deduped-2024-permits.csv  deduped-MANHATTAN-permits-2024.csv  extracted-solar-emails.csv  job#-104241321.csv  ny-permits-2024-with-business-name.csv  ny-permits-2024.csv
src/permits/: ny-permits.py  sf-permits.py
src/scraper/: email_scraper.py  scrape.py  website_scraper.py
